[package]
name = "denoiser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = "0.34.3"
egui = "0.34.3"
image = "0.25.10"
imageproc = "0.27.0"
mpsc = "0.3.0"
opencv = { version = "0.98.2", features = ["clang-runtime"] }
tesseract = "0.15.2"
tokio = { version = "1.52.3", features = ["full"] }
